--- a/Glory_Backend/package.json
+++ b/Glory_Backend/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mime-types": "^3.0.1",
+    "minio": "^8.0.5",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0"
   }
