--- a/Glory_Backend/package.json
+++ b/Glory_Backend/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.845.0",
     "@azure/storage-blob": "^12.27.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
