--- a/image-database/.env.local
+++ b/image-database/.env.local
@@ -4,3 +4,4 @@ AUTH0_BASE_URL='http://localhost:3000'
 AUTH0_ISSUER_BASE_URL='https://oamkdb1.us.auth0.com'
 AUTH0_CLIENT_ID='DXEe66gwRH3qullWnpiG4JXGZiUbpqKe'
 AUTH0_CLIENT_SECRET='VN1Ic08pmTwIZQn_ERHWh46Et2pOtvtYH9ZtVHnLdgty4Ktc-gznHNeHPVzjXxUG'
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
