--- a/image-database/.env.local
+++ b/image-database/.env.local
@@ -1,7 +1,4 @@
 # .env.local
-AUTH0_SECRET='this-should-be-a-long-secure-random-string-at-least-32-chars'
-AUTH0_BASE_URL='http://localhost:3000'
-AUTH0_ISSUER_BASE_URL='https://oamkdb1.us.auth0.com'
-AUTH0_CLIENT_ID='DXEe66gwRH3qullWnpiG4JXGZiUbpqKe'
-AUTH0_CLIENT_SECRET='VN1Ic08pmTwIZQn_ERHWh46Et2pOtvtYH9ZtVHnLdgty4Ktc-gznHNeHPVzjXxUG'
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YWJsZS1tb2xsdXNrLTg1LmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_XSLj6egcvI9miHx0XGj3AeYp2gs4svD4lRWpn10TJq
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
