--- a/image-database/package.json
+++ b/image-database/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^3.7.0",
+    "@clerk/nextjs": "^6.25.4",
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
