--- a/image-database/.env.local
+++ b/image-database/.env.local
@@ -2,3 +2,22 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YWJsZS1tb2xsdXNrLTg1LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_XSLj6egcvI9miHx0XGj3AeYp2gs4svD4lRWpn10TJq
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
+# Frontend Environment (.env.local) - Add these to your Next.js project root
+
+# API Configuration
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
+
+# MinIO Configuration 
+NEXT_PUBLIC_MINIO_URL=http://localhost:9000
+
+# Backend Environment (.env) - Add these to your server project root
+
+# Server Configuration
+SERVER_PORT=8000
+
+# MinIO Configuration
+MINIO_ENDPOINT=localhost
+MINIO_PORT=9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=images
