--- a/Glory_Backend/package.json
+++ b/Glory_Backend/package.json
@@ -23,6 +23,7 @@
     "express": "^5.1.0",
     "mime-types": "^3.0.1",
     "minio": "^8.0.5",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0"
   }
