updated file size to be dynamic

--- a/Glory_Backend/package.json
+++ b/Glory_Backend/package.json
@@ -20,7 +20,9 @@
     "@azure/storage-blob": "^12.27.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "exif-parser": "^0.1.12",
     "express": "^5.1.0",
+    "image-size": "^2.0.2",
     "mime-types": "^3.0.1",
     "minio": "^8.0.5",
     "multer": "^2.0.2",
